@@ -1,7 +1,6 @@
 package org.example.module.expressJava.collectionsJava.tasks.arrayList;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class Task1 {
@@ -12,12 +11,12 @@ public class Task1 {
          Выведите весь список.
          */
 
-        List<Integer> integerList = Arrays.asList(3, 4, 6, 8, 6);
+        List<Integer> integerList = new ArrayList<>(List.of(3, 4, 6, 8, 6));
         integerList.forEach(System.out::println);
         System.out.println();
 
         integerList = new ArrayList<>(integerList);
-        integerList.addLast(10);
+        integerList.add(10);
         integerList.forEach(System.out::println);
 
 
