@@ -1,6 +1,5 @@
 package org.example.module.expressJava.collectionsJava.tasks.linkedList;
 
-import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -12,7 +11,7 @@ public class Task3 {
         Напишите программу, которая печатает первый и последний элементы списка.
          */
 
-        List<String> stringList = Arrays.asList("Строка 1", "Строка 2", "Строка 3", "Строка конец");
+        List<String> stringList = new LinkedList<>(List.of("Строка 1", "Строка 2", "Строка 3", "Строка конец"));
 
         System.out.println(stringList.getFirst());
         System.out.println(stringList.getLast());
